# SkillSecOps

./: .gitignore  CLAUDE.md  pyproject.toml
src/skillsecops/: __init__.py  catalog.py  cli.py  fetch.py  llm.py  models.py  policy.py  search.py
src/skillsecops/analyze/: __init__.py  crossref.py  sandbox.py  static.py  summarize.py
tests/: conftest.py  test_catalog.py  test_crossref.py  test_integration.py  test_llm.py  test_policy.py  test_sandbox.py  test_static_analysis.py  test_summarize.py
tests/payloads/: __init__.py  templates.py
