[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillsecops"
version = "0.1.0"
description = "Security-first triage proxy for AI skill repositories"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32,<3",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",
]
sign = []

[project.scripts]
skillsecops = "skillsecops.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
